update cors in attempt to fix errors and added swagger to the backend, fixed sonar lint issues